[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/Voxel-Core/engine/BottomPanel/VoxelSetView/VoxelView/VoxelView.gd" type="Script" id=1]

[node name="VoxelView" type="ColorRect"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
focus_mode = 2
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
color = Color( 1, 1, 1, 0.1 )
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Color" type="ColorRect" parent="CenterContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 36.0
margin_bottom = 36.0
rect_min_size = Vector2( 32, 32 )
rect_pivot_offset = Vector2( 16, 16 )
mouse_filter = 2

[node name="Texture" type="TextureRect" parent="CenterContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 36.0
margin_bottom = 36.0
rect_min_size = Vector2( 32, 32 )
rect_pivot_offset = Vector2( 16, 16 )
mouse_filter = 2
expand = true
stretch_mode = 5
[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
